--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -9,14 +9,14 @@
 
 .hero-wrapper{
     background-color: #191919;
-    margin: 0 auto;
 }
 
 .hero{
+    margin: 0 auto;
     background-image: url("../assets/home/mobile/image-header.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    max-width: 1100px2;
+    max-width: 1100px;
     background-position:bottom;
     text-align: center;
     padding: 80px 2.5rem;
@@ -47,7 +47,7 @@
 
 .hero-redirect{
     display: inline-block;
-    margin:1.75rem 0;
+    margin-top:1.75rem;
     color: #fff;
     text-decoration: none;
     letter-spacing: 1px;
@@ -323,12 +323,53 @@
 
 
 @media(min-width:900px){
+    .padding-wrapper{
+        margin: 0 auto;
+    }
+    
     .hero{
         background-image: url("../assets/home/desktop/image-hero.jpg");
         background-size: cover;
-        background-position:bottom right;
+        background-position:bottom;
         background-color: #191919;
+        align-items: flex-start;
+        padding-left: 1.5rem;
+        text-align: left;
     }
+
+    .product-category-img{
+        height: 160px;
+    }
+    
+    .product-category-title{
+        font-size: 1.125rem;
+    }
+
+    .zx9{
+        flex-direction: row;
+        justify-content: center;
+        text-align: left;
+        overflow-y: hidden;
+    }
+
+    .zx9-img{
+        content: url("../assets/home/desktop/image-speaker-zx9.png");
+        height: 495px;
+        width: 410px;
+        object-fit: cover;
+        position: relative;
+        top: 70px;
+    }
+
+    .zx9-content{
+        margin-left: 3;
+    }
+
+
+
+
+
+  
 }
 
 @media(min-width:1200px){
