--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 /* Box sizing rules */
+@layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
+
+
+
 *,
 *::before,
 *::after {
